--- a/renderer/main.html
+++ b/renderer/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Read It</title>
+    <title>Bookmark Desktop App</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <link rel="stylesheet" href="main.css" />
 </head>
